<resources>
    <string name="app_name">XML - JAVA soft Quiz</string>
    <string name="opening_text">What have you learned about android? Do you think you know enough of XML and JAVA? Give this quiz a try if you please, and who knows, maybe your knowledge is enough at this point, or maybe it is inefficient!</string>
    <string name="first_question">1. Mark the different Layout types in XML.</string>
    <string name="checkbox_1_question_1">LinearLayout</string>
    <string name="checkbox_2_question_1">ConstraintLayout</string>
    <string name="checkbox_3_question_1">ScrollLayout</string>
    <string name="checkbox_4_question_1">RelativeLayout</string>
    <string name="second_question">2. In which layout we can use the attribute &quot;weight&quot;?</string>
    <string name="radiobutton_1_question_2">RelativeLayout</string>
    <string name="radiobutton_2_question_2">LinearLayout</string>
    <string name="third_question">3. Which is/are the appropriate size density/densities for a text?</string>
    <string name="checkbox_1_question_3">dp</string>
    <string name="checkbox_2_question_3">px</string>
    <string name="checkbox_3_question_3">sp</string>
    <string name="checkbox_4_question_3">pt</string>
    <string name="fourth_question_a_section">4.a) Name the appropriate file to store images in Android Studio.</string>
    <string name="editText_hint">Enter file name&#8230;</string>
    <string name="fourth_question_b_section">   b) Name the appropriate XML file to store text in Android Studio.</string>
    <string name="fifth_question">5. Check the correct access modifier to make a variable usable only from a specific method.</string>
    <string name="radiobutton_1_question_5">Private</string>
    <string name="radiobutton_2_question_5">Public</string>
    <string name="radiobutton_3_question_5">Protected</string>
    <string name="sixth_question">6. Which of the following Variable Types are correct?</string>
    <string name="checkbox_int">int</string>
    <string name="checkbox_decimal">Decimal</string>
    <string name="checkbox_char">char</string>
    <string name="checkbox_string">String</string>
    <string name="checkbox_text">text</string>
    <string name="checkbox_bool">Bool</string>
    <string name="seventh_question_a_section">7.a) What does a constructor do?</string>
    <string name="radiobutton_1_question_7">Initializes the Object</string>
    <string name="radiobutton_2_question_7">Declares the Object</string>
    <string name="radiobutton_3_question_7">Creates the Object</string>
    <string name="radiobutton_4_question_7">Connects an Object with a method</string>
    <string name="seventh_question_b_section">b) What happens when we DON\'T declare a constructor?</string>
    <string name="radiobutton_1_question_7b">Nothing</string>
    <string name="radiobutton_2_question_7b">The compiler creates a constructor with no parameters</string>
    <string name="radiobutton_3_question_7b">We cannot use an Object</string>
    <string name="eighth_question_a">8. a) Create a public constructor named myConstructor with no arguments.</string>
    <string name="editText_7a_hint">No spaces before and after special characters</string>
    <string name="eighth_question_b">   b) Now recreate the Constructor using the arguments \"String firstArg\" and \"int secondArg\".</string>
    <string name="editText_7b_hint">No spaces before and after special characters</string>
    <string name="Submit">Submit</string>
    <string name="drawable_question4">Drawable</string>
    <string name="strings_question4_case1">Strings</string>
    <string name="strings_question4_case2">strings.xml</string>
    <string name="question8a_case1">public myConstructor(){}</string>
    <string name="question8a_case2">public myConstructor(){\n}</string>
    <string name="question8a_case3">public myConstructor () {}</string>
    <string name="question8a_case4">public myConstructor (){}</string>
    <string name="question8a_case5">public myConstructor() {}</string>
    <string name="question8a_case6">public myConstructor () {\n}</string>
    <string name="question8a_case7">public myConstructor (){\n}</string>
    <string name="question8a_case8">public myConstructor() {\n}</string>
    <string name="question8b_case1">public myConstructor(String firstArg,int secondArg){}</string>
    <string name="question8b_case2">public myConstructor(String firstArg,int secondArg){\n}</string>
    <string name="question8b_case3">public myConstructor (String firstArg,int secondArg){}</string>
    <string name="question8b_case4">public myConstructor( String firstArg,int secondArg){}</string>
    <string name="question8b_case5">public myConstructor ( String firstArg,int secondArg){}</string>
    <string name="question8b_case6">public myConstructor(String firstArg ,int secondArg){}</string>
    <string name="question8b_case7">public myConstructor(String firstArg, int secondArg){}</string>
    <string name="question8b_case8">public myConstructor(String firstArg , int secondArg){}</string>
    <string name="question8b_case9">public myConstructor ( String firstArg , int secondArg ){}</string>
    <string name="question8b_case10">public myConstructor ( String firstArg , int secondArg){}</string>
    <string name="question8b_case11">public myConstructor ( String firstArg, int secondArg){}</string>
    <string name="question8b_case12">public myConstructor (String firstArg,int secondArg){\n}</string>
    <string name="question8b_case13">public myConstructor (String firstArg,int secondArg){\n}</string>
    <string name="question8b_case14">public myConstructor( String firstArg,int secondArg){\n}</string>
    <string name="question8b_case15">public myConstructor ( String firstArg,int secondArg){\n}</string>
    <string name="question8b_case16">public myConstructor(String firstArg ,int secondArg){\n}</string>
    <string name="question8b_case17">public myConstructor(String firstArg, int secondArg){\n}</string>
    <string name="question8b_case18">public myConstructor(String firstArg , int secondArg){\n}</string>
    <string name="question8b_case19">public myConstructor ( String firstArg , int secondArg ){\n}</string>
    <string name="question8b_case20">public myConstructor ( String firstArg , int secondArg){\n}</string>
    <string name="question8b_case21">public myConstructor ( String firstArg, int secondArg){\n}</string>
    <string name="question8b_case22">public myConstructor (String firstArg,int secondArg){\n}</string>
</resources>
